modifiers: fix wrap modifier

--- a/src/modifiers.css
+++ b/src/modifiers.css
@@ -143,7 +143,7 @@
 }
 
 .-nu-wrap {
-  white-space: pre-wrap;
+  white-space: normal;
 }
 
 .-nu-nowrap {
